# wavern

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  KEYBINDINGS.md  README.md  SECURITY.md  pyproject.toml  wavern.desktop
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
plugins/: README.md
src/wavern/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_setup.py
tests/: conftest.py  test_audio_analyzer.py  test_background_movement.py  test_cli.py  test_codecs.py  test_color_distribution.py  test_drag_spinbox.py  test_export_config.py  test_favorites_store.py  test_hwaccel.py  test_lissajous.py  test_logging_setup.py  test_new_presets.py  test_preset_manager.py  test_preset_schema.py  test_radial_waveform.py  test_sidebar.py  test_spectrogram.py  test_theme_manager.py  test_video_source.py  test_visualization_registry.py  test_viz_memory.py
tests/core/: test_audio_analyzer.py  test_background_movement.py  test_bg_effects.py  test_codecs.py  test_concat_integration.py  test_export_config.py  test_fade.py  test_ffmpeg_cmd.py  test_global_effects.py  test_hwaccel.py  test_renderer_layers.py  test_video_concat.py  test_video_source.py
tests/gui/: conftest.py  test_change_scope_routing.py  test_drag_spinbox.py  test_favorites_store.py  test_layer_list_widget.py  test_panel_persistence.py  test_preset_panel.py  test_sidebar.py  test_theme_manager.py  test_transport_bar.py
tests/presets/: test_all_presets.py  test_layer_schema.py  test_manager_viz_type.py  test_new_presets.py  test_preset_cache.py  test_preset_manager.py  test_preset_schema.py
tests/visualizations/: conftest.py  test_color_distribution.py  test_common.py  test_lissajous.py  test_oscilloscope.py  test_radial_waveform.py  (+4 more)
(+145 files in other folders)
