[project]
name = "wavern"
version = "0.0.1-alpha.1"
description = "Highly customizable local music visualizer"
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7",
    "moderngl>=5.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "pydub>=0.25",
    "imageio-ffmpeg>=0.5",
    "pydantic>=2.6",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.3", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
wavern = "wavern.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wavern"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
