[project]
name = "wavern"
version = "1.0.0-alpha.1"
description = "Highly customizable local music visualizer"
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<3.13"
dependencies = [
    "PySide6>=6.7,<7",
    "moderngl>=5.10,<6",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "soundfile>=0.12,<1",
    "sounddevice>=0.4,<1",
    "pydub>=0.25,<1",
    "imageio-ffmpeg>=0.5,<1",
    "pydantic>=2.6,<3",
    "click>=8.1,<9",
    "Pillow>=10.0,<12",
    "av>=14.0,<18",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.3", "ruff>=0.4", "pyright>=1.1"]

[project.scripts]
wavern = "wavern.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wavern"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
